<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/ctlLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
             >

            <ImageView
                android:id="@+id/imgToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/alberta"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/appbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:minHeight="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" >

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="antonioejemplo.com.libreriavoley2.MainActivity"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        android:layout_marginLeft="5dp">


        <EditText
            android:id="@+id/txtciudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ciudad"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/txtinformacion"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            />


        <Button
            android:layout_width="220dp"
            android:layout_height="35dp"
            android:text="@string/borrar_datos"
            android:id="@+id/btnresultado"
            android:enabled="false"
            android:background="@drawable/redondea_boton"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_top_margin"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />


        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtrespuesta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pron_stico_actualizado"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/icono"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/error"
                android:visibility="invisible"


                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/txtrespuesta"
                android:layout_toEndOf="@+id/txtrespuesta" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"

            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estaci_n_meteorol_gica"
            android:id="@+id/txtstation"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperatura"
            android:id="@+id/txtclima"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nubosidad"
            android:id="@+id/txtnubes"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datos_sobre_el_viento"
            android:id="@+id/txtwind"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/presi_n_atmosf_rica"
            android:id="@+id/textbase"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humedad"
            android:id="@+id/txtHumedad"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/coordenadas"
            android:id="@+id/txtcoordenadas"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="@color/colorPrimary"
            android:layout_marginBottom="5dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp">
        <ImageView
            android:id="@+id/imgclima"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/clima_new"
            android:visibility="visible"

            />

        <include layout="@layout/lista_pronosticos" />

        </FrameLayout>
    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_settings_brightness_black_24dp"
        app:borderWidth="0dp"
        app:layout_anchor="@id/appbarLayout"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>
